# IsothermLib

./: CMakeLists.txt
Exemplos/TwoParameters/Elovich/: CMakeLists.txt  Elovich.cpp
IsothermLib/doxygen/: Doxyfile  namespaces.html
IsothermLib/doxygen/html/: _configure_8h.html  _configure_8h_source.html  _dubinin_radushkevich_8h.html  _dubinin_radushkevich_8h_source.html  _elovich_8h.html  _elovich_8h_source.html  _formulas.tex  _formulas_dark.tex  _freundlich_8h.html  _freundlich_8h_source.html  _group_8h_source.html  _halsey_8h.html  _halsey_8h_source.html  _harkin_jura_8h.html  _harkin_jura_8h_source.html  _harkins_jura_8h.html  _harkins_jura_8h_source.html  _henry_8h.html  _henry_8h_source.html  _i_d_8h.html  _i_d_8h_source.html  _iso_exception_8h.html  _iso_exception_8h__dep__incl.dot  _iso_exception_8h__incl.dot  _iso_exception_8h_source.html  _isotherm_8h.html  _isotherm_8h_source.html  _isotherm_error_8h_source.html  _jovanovic_8h.html  _jovanovic_8h_source.html  _langmuir_8h.html  _langmuir_8h_source.html  _misc_8h.html  _misc_8h_source.html  _newton_raphson_8h.html  _newton_raphson_8h_source.html  _one_parameter_8h.html  _one_parameter_8h_source.html  _source_info_8h.html  _source_info_8h_source.html  (+206 more)
IsothermLib/doxygen/latex/: _configure_8h_source.tex  _dubinin_radushkevich_8h_source.tex  _elovich_8h_source.tex  _freundlich_8h_source.tex  _group_8h_source.tex  _halsey_8h_source.tex  _harkin_jura_8h_source.tex  _henry_8h_source.tex  _i_d_8h_source.tex  _iso_exception_8h.tex  _iso_exception_8h_source.tex  _misc_8h_source.tex  (+83 more)
IsothermLib/include/: Isotherm.h
(+134 files in other folders)
